# nutritions

./: Cargo.toml
recipes/: 5-oats-pancakes.yaml  banana-cake.yaml  beef-anchous.yaml  beetroot-caviar.yaml  blackberry-jamm.yaml  cabbage-horse-redish.yaml  chicken-breast-onion-carrot.yaml  chicken-hearts-with-sour-cream.yaml  chicken-liver-with-sour-cream.yaml  cream-beans.yaml  ginger-tomato-souse.yaml  green-sauce.yaml  kimchi.yaml  korean-cabbage.yaml  korean-carrot.yaml  lobio.yaml  mothers-meatballs.yaml  mothers-peppers-with-minced-meat.yaml  pancakes.yaml  panna-cotta.yaml  plov-buckweed.yaml  plov-rice.yaml  plov.yaml  pork-beans-sourcream.yaml  pork-turkey-beans-ketchup.yaml  pork-turkey-beans-teriyaky.yaml  squid-with-cream.yaml  syrniki.yaml  turkey-breast-with-korean-flavor.yaml  turkey-hearts-with-korean-flavor.yaml  turkey-hearts-with-sour-cream.yaml  turkey-nut-teriyaky.yaml  turkey-shashlyk.yaml  warm-salad.yaml  zirvak.yaml
src/: main.rs  recipe.rs
