[package]
name = "nutritions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.2"
clap = { version = "4.0.32", features = ["derive"] }
enum-iterator = "1.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
tokio = { version = "1.24.1", features = ["macros", "fs", "io-util", "rt-multi-thread"] }
toml = "0.5.10"
